# ETL-Testing-

./: .gitignore  README.md  pyproject.toml  requirements.txt
dbt_sunglass_store/: .gitignore  dbt_project.yml
dbt_sunglass_store/models/: sources.yml
dbt_sunglass_store/models/marts/dimensions/: dim_dates.sql  dim_interactions.sql  dim_products.sql  dim_schema.yml  dim_users.sql
dbt_sunglass_store/models/marts/facts/: fct_orders.sql  fct_products_summary.sql  fct_schema.yml  fct_users_summary.sql
dbt_sunglass_store/models/marts/metrics/: age_distribution.sql  metrics_schema.yml  monthly_active_users.sql  monthly_sales.sql  platform_sales.sql  total_revenue.sql
dbt_sunglass_store/models/staging/: stg_interaction_types.sql  stg_interactions.sql  stg_orders.sql  stg_products.sql  stg_schema.yml  stg_users.sql
etl_sunglass_store/: .gitignore  models.py  postgres_pipeline.py
