[project]
name = "sunglass-store-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.15",
    "dbt-postgres>=1.9.1",
    "dlt[athena,postgres,s3]>=1.18.2",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
